Fix header alignment and refactor css

--- a/frontend/src/components/headerbar.module.css
+++ b/frontend/src/components/headerbar.module.css
@@ -1,11 +1,16 @@
 .headerBar {
-    padding: 1px;
-    text-align: left;
-    background: white;
-    box-shadow: 0px 1px 10px lightgray;
+  position: fixed;
+  top: 0;
+  height: var(--header-height);
+  width: 100%;
+  margin-left: var(--sidebar-width);
+  text-align: left;
+  background: white;
+  box-shadow: 0px 1px 10px lightgray;
 }
 
 .headerBar h1 {
-    margin-left: 30px;
-    font-size: 20px;
+  margin: 16px 0px auto 30px;
+  font-size: 22px;
+  font-weight: normal;
 }
