--- a/frontend/src/components/sidenavigation.module.css
+++ b/frontend/src/components/sidenavigation.module.css
@@ -1,7 +1,7 @@
 .sidenav {
   height: 100%;
   /* Full-height: remove this if you want "auto" height */
-  width: 160px;
+  width: var(--sidebar-width);
   /* Set the width of the sidebar */
   position: fixed;
   /* Fixed Sidebar (stay in place on scroll) */
@@ -39,13 +39,6 @@
 .sidenav hr {
   margin-top: 15px;
   margin-bottom: 8pxpx;
-}
-
-/* Style page content */
-.main {
-  margin-left: 160px;
-  /* Same as the width of the sidebar */
-  padding: 0px 10px;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
