--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,4 +1,8 @@
-html,
+html {
+  --sidebar-width: 160px;
+  --header-height: 60px;
+}
+
 body {
   padding: 0;
   margin: 0;
